feat: add products section

--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
+/* @import url("products.css"); */
+/* @import url("about.css"); */
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   background: url(img/kuzu-sis-kebap.jpeg) no-repeat center center fixed;
